--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,9 +14,10 @@ body {
 }
 
 
-.row h2 {
+.q-one h2 {
     text-align: center;
-    font-size: 16px;
+    font-size: 18px;
+    padding-top: 40px;
 }
 
 .row p {
